--- a/pagini/Pasiuni.html
+++ b/pagini/Pasiuni.html
@@ -18,7 +18,6 @@
                     in care trebuie sa te provoci singur mai mult, sa iti folosesti
                     gandirea, atitudinea si echilibrul pentru a castiga. Acesta este 
                     sportul complet si il practic cu foarte mare placere.
-
                 <h2>
             </div>
             <div class="imagine">
@@ -31,10 +30,9 @@
             </div>
             <div class="text">
                 <h2>
-                    kajsdlkajsdjhskjashdkjashdjkaslhdaksjlhdkajshdajksdhajsd
-                    a;isodjalsjkdhasjlkhasjkdasjkdhasjkasjkd
-                    jaskhdaklsjdhashdasjdaosidaosdja;soidjaosidjaoisjdioasjda
-                    aoshdaoisjdaiosjdoiasjdoiasjdiasjd
+                    A doua mea pasiune este fotbalul. Este sportul care mi-a dezvoltat abilitatea
+                    de a lucra in echipa. Datorita acestui sport mi-am facut multi prieteni cu care 
+                    ma intalnesc si acum.
                 </h2>
             </div>
         </div>
